# google-music

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  mobileclient.rst  musicmanager.rst  sessions.rst  token-handlers.rst
src/google_music/: __about__.py  __init__.py  api.py  decorators.py  session.py  sessions.py  token_handlers.py  utils.py
src/google_music/clients/: __init__.py  base.py  mobileclient.py  musicmanager.py
