[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "google-music"
description = "A Google Music API wrapper."
version = "3.0.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/google-music"
homepage = "https://github.com/thebigmunch/google-music"

[tool.poetry.dependencies]
python = "^3.6"

appdirs = "^1.4"
audio-metadata = "^0.3"
google-music-proto = "^2.2"
protobuf = "^3.5"
requests-oauthlib = "^1.0"
tenacity = "^5.0"

flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0.0", optional = true }
sphinx = { version = "^1.7", optional = true }

[tool.poetry.extras]
dev = [ "flake8", "flake8-builtins", "flake8-import-order", "flake8-import-order-tbm", "sphinx" ]
doc = [ "sphinx" ]
lint = [ "flake8", "flake8-builtins", "flake8-import-order", "flake8-import-order-tbm" ]
